# cdxml-toolkit

./: .gitattributes  .gitignore  CLAUDE.md  LICENSE  NOTICE.md  README.md  SHOWCASE.md  pyproject.toml  pytest.ini  test_parser_normalization.py
cdxml_toolkit/: __init__.py  _chemscript_server.py  aligned_namer.py  alignment.py  cas_resolver.py  cdx_converter.py  cdxml_builder.py  cdxml_to_image_rdkit.py  cdxml_utils.py  chemscanner_abbreviations.json  chemscript_bridge.py  condensed_formula.py  constants.py  coord_normalizer.py  doctor.py  eln_cdx_cleanup.py  eln_enrichment.py  name_decomposer.py  ole_extractor.py  rdf_parser.py  rdkit_utils.py  reactant_heuristic.py  reaction_cleanup.py  reaction_from_image.py  reaction_parser.py  reagent_abbreviations.json  reagent_db.py  scheme_aligner.py  scheme_maker.py  scheme_merger.py  scheme_polisher.py  scheme_polisher_v2.py  scheme_reader.py  scheme_segmenter.py  spatial_assignment.py  structure_from_image.py  superatom_table.py  text_formatting.py
cdxml_toolkit/_jre/: __init__.py
cdxml_toolkit/analysis/: __init__.py  extract_nmr.py  format_procedure_entry.py  lcms_analyzer.py  parse_analysis_file.py
cdxml_toolkit/analysis/deterministic/: __init__.py  discover_experiment_files.py  lab_book_formatter.py  lcms_file_categorizer.py  lcms_identifier.py  mass_resolver.py  multi_lcms_analyzer.py  procedure_writer.py
cdxml_toolkit/chemdraw/: __init__.py  cdx_converter.py  cdxml_to_image.py  chemscript_bridge.py
cdxml_toolkit/deterministic_pipeline/: __init__.py  scheme_reader_audit.py
cdxml_toolkit/deterministic_pipeline/legacy/: __init__.py  eln_enrichment.py  scheme_aligner.py  scheme_polisher.py  scheme_polisher_v2.py
cdxml_toolkit/dsl/: __init__.py  compact_parser.py  parser.py  render_scheme.py  renderer.py  schema.py  scheme_yaml_writer.py
cdxml_toolkit/image/: __init__.py  reaction_from_image.py  structure_from_image.py
cdxml_toolkit/layout/: __init__.py  alignment.py  eln_enrichment.py  reaction_cleanup.py  scheme_aligner.py  scheme_merger.py  scheme_polisher.py  scheme_polisher_v2.py
cdxml_toolkit/mcp_server/: __main__.py  server.py
cdxml_toolkit/naming/: __init__.py  aligned_namer.py  mol_builder.py  name_decomposer.py
cdxml_toolkit/office/: __init__.py  doc_from_template.py  ole_embedder.py  ole_extractor.py
cdxml_toolkit/perception/: __init__.py  compound_search.py  eln_csv_parser.py  rdf_parser.py  reactant_heuristic.py  reaction_parser.py  scheme_reader.py  scheme_reader_audit.py  scheme_reader_verify.py  scheme_refine.py  scheme_segmenter.py  spatial_assignment.py
cdxml_toolkit/render/: __init__.py  auto_layout.py  parser.py  renderer.py  schema.py  scheme_maker.py  scheme_yaml_writer.py
cdxml_toolkit/resolve/: __init__.py  cas_resolver.py  jre_manager.py  reagent_db.py  superatom_data.json
docs/: scheme_reader_assets.md
experiments/scheme_dsl/: COMPACT_SYNTAX.md  YAML_SYNTAX.md
experiments/scheme_dsl/showcase/: 01_buchwald_linear.cdxml  01_buchwald_linear.yaml  02_suzuki_linear.cdxml  02_suzuki_linear.yaml  03_snar_linear.cdxml  03_snar_linear.yaml  04_amide_coupling_linear.cdxml  04_amide_coupling_linear.yaml  05_boc_deprotection_linear.cdxml  05_boc_deprotection_linear.yaml  06_two_step_sequential.cdxml  06_two_step_sequential.yaml  07_three_step_sequential.cdxml  07_three_step_sequential.yaml  08_wrap_repeat_4step.cdxml  08_wrap_repeat_4step.yaml  09_wrap_repeat_5step.cdxml  09_wrap_repeat_5step.yaml  10_wrap_repeat_with_run_arrows.cdxml  10_wrap_repeat_with_run_arrows.yaml  11_wrap_repeat_with_dashed.cdxml  11_wrap_repeat_with_dashed.yaml  12_serpentine_5step.cdxml  12_serpentine_5step.yaml  13_serpentine_7step.cdxml  13_serpentine_7step.yaml  14_letter_conditions_3step.cdxml  14_letter_conditions_3step.yaml  15_letter_conditions_serpentine.cdxml  15_letter_conditions_serpentine.yaml  16_failed_arrow.cdxml  16_failed_arrow.yaml  17_divergent_buchwald_sar.cdxml  17_divergent_buchwald_sar.yaml  18_divergent_4products.cdxml  18_divergent_4products.yaml  19_stacked_rows_comparison.cdxml  19_stacked_rows_comparison.yaml  20_stacked_rows_different_routes.cdxml  20_stacked_rows_different_routes.yaml  (+21 more)
samples/KL-CC-001/: KL-CC-001.cdx  KL-CC-001.cdxml  KL-CC-001.csv  KL-CC-001.rxn  reaction.json  scheme.cdxml  scheme.yaml
samples/KL-CC-002/: KL-CC-002.cdx  KL-CC-002.csv  KL-CC-002.rxn  reaction.json  scheme.cdxml  scheme.yaml
samples/consolidated/: two-step-scheme.cdxml  two-step-scheme.yaml
scripts/: read_session.py  read_session2.py  task7b_check_descriptor.py  task7b_check_sig.py  task7b_step1_parse.py  task7b_step2_summary.py  task7b_step3_merge.py  task7b_verify.py
tests/: conftest.py  test_builder.py  test_cdxml_utils.py  test_condensed_formula.py  test_constants.py  test_merge_yaml.py  test_mol_builder.py  test_rdkit_utils.py  test_reaction_parser.py  test_reagent_db.py  test_scheme_maker.py  test_scheme_reader.py  test_smoke.py  test_smoke_extended.py  test_spatial_assignment.py  test_superatom_table.py  test_text_formatting.py
