[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "cdxml-toolkit"
version = "0.5.1"
description = "MCP server and Python toolkit for perception, rendering, and analysis of molecules and reaction schemes in ChemDraw CDXML."
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    {name = "Hiu Fung Kevin Lee"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: Microsoft :: Windows",
]
dependencies = [
    "lxml>=4.6",
]

[project.optional-dependencies]
# Core chemistry extras
rdkit = ["rdkit>=2023.03"]
chemdraw = ["pywin32>=300"]
image = ["opencv-python>=4.5", "Pillow>=9.0"]
office = ["python-pptx>=0.6", "python-docx>=0.8", "olefile>=0.46"]
yaml = ["pyyaml>=5.4"]
mcp = ["mcp>=1.0", "pyyaml>=5.4"]
analysis = ["pdfplumber>=0.7"]

# Lazy-loaded runtime deps (previously undeclared)
chemscript = ["pythonnet>=3.0"]
# DECIMER image extraction — neural OCR for chemical structures.
# Only DECIMER (the image→SMILES transformer) is needed; cdxml-toolkit
# has its own segmentation logic and does NOT use decimer-segmentation.
# pymupdf is needed to render PDF pages to images before passing to DECIMER.
decimer = [
    "tensorflow>=2.16",
    "decimer>=2.6",
    "pymupdf>=1.20",
]
ocr = ["pytesseract>=0.3"]

# Composite extras
opsin = ["py2opsin>=1.0"]
all = ["cdxml-toolkit[rdkit,chemdraw,image,office,yaml,analysis,mcp,chemscript,opsin]"]
full = ["cdxml-toolkit[all,decimer,ocr]"]
dev = ["cdxml-toolkit[all]", "pytest>=7.0"]

[project.urls]
Homepage = "https://github.com/leehiufung911/cdxml-toolkit"
Repository = "https://github.com/leehiufung911/cdxml-toolkit"
Issues = "https://github.com/leehiufung911/cdxml-toolkit/issues"

[project.scripts]
cdxml-render = "cdxml_toolkit.render.render_scheme:main"
cdxml-layout = "cdxml_toolkit.layout.reaction_cleanup:main"
cdxml-build = "cdxml_toolkit.cdxml_builder:main"
cdxml-convert = "cdxml_toolkit.chemdraw.cdx_converter:main"
cdxml-image = "cdxml_toolkit.chemdraw.cdxml_to_image:main"
cdxml-polish = "cdxml_toolkit.deterministic_pipeline.legacy.scheme_polisher_v2:main"
cdxml-parse = "cdxml_toolkit.perception.reaction_parser:main"
cdxml-merge = "cdxml_toolkit.layout.scheme_merger:main"
cdxml-ole = "cdxml_toolkit.office.ole_embedder:main"
cdxml-mcp = "cdxml_toolkit.mcp_server.server:main"
cdxml-lcms = "cdxml_toolkit.analysis.lcms_analyzer:main"
cdxml-multi-lcms = "cdxml_toolkit.analysis.deterministic.multi_lcms_analyzer:main"
cdxml-procedure = "cdxml_toolkit.analysis.deterministic.procedure_writer:main"
cdxml-discover = "cdxml_toolkit.analysis.deterministic.discover_experiment_files:main"
cdxml-format-entry = "cdxml_toolkit.analysis.format_procedure_entry:main"
cdxml-nmr = "cdxml_toolkit.analysis.extract_nmr:main"

[tool.setuptools.packages.find]
include = ["cdxml_toolkit*"]

[tool.setuptools.package-data]
"cdxml_toolkit.resolve" = ["*.json"]
"cdxml_toolkit.naming" = ["*.json"]
"cdxml_toolkit._jre" = ["*.zip"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "network: tests requiring internet access",
]
