[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "cdxml-toolkit"
version = "0.5.11"
description = "MCP server and Python toolkit for perception, rendering, and analysis of molecules and reaction schemes in ChemDraw CDXML."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10,<3.14"
authors = [
    {name = "Hiu Fung Kevin Lee"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: Microsoft :: Windows",
]
dependencies = [
    "lxml>=4.6",
    "rdkit>=2023.03",
    "pywin32>=300",
    "opencv-python>=4.5",
    "Pillow>=9.0",
    "python-pptx>=0.6",
    "python-docx>=0.8",
    "olefile>=0.46",
    "pyyaml>=5.4",
    "mcp>=1.0",
    "pdfplumber>=0.7",
    "pythonnet>=3.0",
    "tensorflow>=2.16",
    "decimer>=2.6",
    "pymupdf>=1.20",
    "pytesseract>=0.3",
    "py2opsin>=1.0",
    "pytest>=7.0",
]

[project.optional-dependencies]
dev = ["cdxml-toolkit", "pytest>=7.0"]

[project.urls]
Homepage = "https://github.com/leehiufung911/cdxml-toolkit"
Repository = "https://github.com/leehiufung911/cdxml-toolkit"
Issues = "https://github.com/leehiufung911/cdxml-toolkit/issues"

[project.scripts]
cdxml-render = "cdxml_toolkit.render.render_scheme:main"
cdxml-layout = "cdxml_toolkit.layout.reaction_cleanup:main"
cdxml-build = "cdxml_toolkit.cdxml_builder:main"
cdxml-convert = "cdxml_toolkit.chemdraw.cdx_converter:main"
cdxml-image = "cdxml_toolkit.chemdraw.cdxml_to_image:main"
cdxml-polish = "cdxml_toolkit.deterministic_pipeline.legacy.scheme_polisher_v2:main"
cdxml-parse = "cdxml_toolkit.perception.reaction_parser:main"
cdxml-merge = "cdxml_toolkit.layout.scheme_merger:main"
cdxml-ole = "cdxml_toolkit.office.ole_embedder:main"
cdxml-mcp = "cdxml_toolkit.mcp_server.server:main"
cdxml-lcms = "cdxml_toolkit.analysis.lcms_analyzer:main"
cdxml-multi-lcms = "cdxml_toolkit.analysis.deterministic.multi_lcms_analyzer:main"
cdxml-procedure = "cdxml_toolkit.analysis.deterministic.procedure_writer:main"
cdxml-discover = "cdxml_toolkit.analysis.deterministic.discover_experiment_files:main"
cdxml-format-entry = "cdxml_toolkit.analysis.format_procedure_entry:main"
cdxml-nmr = "cdxml_toolkit.analysis.extract_nmr:main"
cdxml-doctor = "cdxml_toolkit.doctor:main"

[tool.setuptools.packages.find]
include = ["cdxml_toolkit*"]

[tool.setuptools.package-data]
"cdxml_toolkit.resolve" = ["*.json"]
"cdxml_toolkit.naming" = ["*.json"]
"cdxml_toolkit._jre" = ["*.zip"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "network: tests requiring internet access",
]
